Fix spacing in about us page

--- a/src/Components/Pages/AboutPage/aboutus/aboutustext.css
+++ b/src/Components/Pages/AboutPage/aboutus/aboutustext.css
@@ -4,7 +4,7 @@
 .about-textbox {
   margin-top: 75px;
   text-align: center;
-  margin-bottom: 150px;
+  margin-bottom: 4%;
   margin-left: 10%;
   margin-right: 10%;
 }
@@ -48,6 +48,11 @@
   width: 100%;
 }
 
+.description-text {
+  margin-left: 12%;
+  margin-top: 150px;
+}
+
 @media (max-width: 1059px) {
   .aboutheader {
     font-size: 40px;
@@ -58,9 +63,15 @@
   .subheader {
     font-size: 24px;
   }
-
   .subtext {
     font-size: 18px;
+  }
+  .about-textbox {
+    margin-bottom: 1%;
+  }
+  .description-text {
+    margin-left: 12%;
+    margin-top: 50px;
   }
 }
 @media (max-width: 700px) {
@@ -75,5 +86,8 @@
   }
   .subtext {
     font-size: 18px;
+  }
+  .about-textbox {
+    margin-bottom: 0%;
   }
 }
